--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ h2 {
    <h2>Resultados:</h2>
 
 <div class="results-container">
-        <div class="result-block color2"onclick="showPopup('Tamanho do carrossel: X metros')">
+        <div class="result-block color2"onclick="showPopup('Tamanho ao qual deve ajustar o carrossel para não sobrar muito material após cortado, isto é importante para não gerar resíduo.')">
         <p id="carouselSizeResult">Tamanho do carrossel: </p>
     </div>
     <div class="result-block color1">
