--- a/index.html
+++ b/index.html
@@ -261,30 +261,30 @@ h2 {
    <h2>Resultados:</h2>
 
 <div class="results-container">
-        <div class="result-block color2"onclick="showPopup('Tamanho ao qual deve ajustar o carrossel para não sobrar muito material após cortado, isto é importante para não gerar resíduo.')">
+        <div class="result-block color2"onclick="showPopup('Tamanho ao qual deve-se ajustar o carrossel para não sobrar muito material após cortado, este ajuste é feito no carrossel trocando os pinos de lugar. Recurso importante para não gerar resíduo.')">
         <p id="carouselSizeResult">Tamanho do carrossel: </p>
     </div>
-    <div class="result-block color1">
+    <div class="result-block color1"onclick="showPopup('É o número de vezes ao qual você irá cortar o tecido na mesa.')">
         <p id="cutsResult">Número de Cortes na mesa: </p>
     </div>
 
-    <div class="result-block color2">
+    <div class="result-block color2"onclick="showPopup('É o número de que o carrossel irá fazer, pode ser definido no painel da máquina.')">
         <p id="turnsResult">Número de Voltas Carrossel: </p>
     </div>
     
-    <div class="result-block color5">
+    <div class="result-block color5"onclick="showPopup('É o número de vezes ao qual você irá retirar o tecido do carrossel e colocá-lô na mesa.')">
         <p id="cyclesResult">Número de Carrossel: </p>
     </div>
 
-        <div class="result-block color6">
+        <div class="result-block color6"onclick="showPopup('É o número de restantes para fechar a quantidade da OP, por exemplo: de o número de carrossel é 5,45 serão 5 carrosséis e mais 0,45 que convertento em voltas fecharão o total da OP.')">
         <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
     </div>
 
-    <div class="result-block color3">
+    <div class="result-block color3"onclick="showPopup('É a quantidade cortada por um carrossel, quando termina o número de voltas de um ciclo completo do carrossel.')">
         <p id="cutAmountResult">Quantidade Cortada por Carrossel: </p>
     </div>
 
-    <div class="result-block color4">
+    <div class="result-block color4"onclick="showPopup('É a quantidade total depois de terminar de rodar todos os carrosséis, este valor sempre deve ser o mais próximo possível da quantidade solicitada na OP.')">
         <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     </div>
 
