--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ h2 {
         <p id="cutsResult">Número de Cortes na mesa: </p>
     </div>
 
-    <div class="result-block color2"onclick="showPopup('É o número de que o carrossel irá fazer, pode ser definido no painel da máquina.')">
+    <div class="result-block color2"onclick="showPopup('É o número de voltas que o carrossel irá fazer, pode ser definido no painel da máquina.')">
         <p id="turnsResult">Número de Voltas Carrossel: </p>
     </div>
     
