--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ h2 {
         <p id="cyclesResult">Número de Carrossel: </p>
     </div>
 
-        <div class="result-block color6"onclick="showPopup('É o número de restantes para fechar a quantidade da OP, por exemplo: de o número de carrossel é 5,45 serão 5 carrosséis e mais 0,45 que convertento em voltas fecharão o total da OP.')">
+        <div class="result-block color6"onclick="showPopup('É o número de voltas restantes para fechar a quantidade da OP, por exemplo: de o número de carrossel é 5,45 serão 5 carrosséis e mais 0,45 que convertento em voltas fecharão o total da OP.')">
         <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
     </div>
 
