--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@ h2 {
 }
 
 #downloadBtn {
-    background-color: #007BFF;
-    margin-top: 25px;
-    padding: 12px 20px;
-    font-size: 1.1em;
+    padding: 12px 25px;
+    color: white;
+    border: none;
     border-radius: 6px;
+    cursor: pointer;
+    margin-right: 8px;
+    margin-top: 12px;
     transition: background-color 0.3s;
+    font-size: 1em;
 }
 
 #downloadBtn:hover {
