--- a/index.html
+++ b/index.html
@@ -308,7 +308,13 @@ h2 {
                 <th>Comprimento da OP</th>
                 <th>Tipo de Tecido</th>
                 <th>Gramatura da OP</th>
-                
+            <th>Número de Cortes</th> <!-- Título novo -->
+            <th>Número de Voltas</th> <!-- Título novo -->
+            <th>Quantidade Cortada</th> <!-- Título novo -->
+            <th>Número de Carrosséis</th> <!-- Título novo -->
+            <th>Restante de Voltas</th> <!-- Título novo -->
+            <th>Quantidade Total Cortada</th> <!-- Título novo -->
+            <th>Tamanho do Carrossel</th> <!-- Título novo -->
             </tr>
         </thead>
         <tbody></tbody>
