--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@ h2 {
 
 </div>
 
-
-
   <button onclick="downloadCSV()">Download CSV</button>
+    // TABELA
     <table id="recordsTable">
         <thead>
+            // CABEÇALHO DA TABELA
             <tr>
                 <th>Data e Hora</th>
                 <th>Máquinas Ativas</th>
