--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ h2 {
 </div>
 
   <button onclick="downloadCSV()">Download CSV</button>
-<!-- TABELA -->
+    // TABELA
     <table id="recordsTable">
         <thead>
 <!-- CABEÇALHO DA TABELA -->
