--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ h2 {
 }
 
 .color1 {
-    background-color: #e1f5fe;
+    background-color: #3f51b5;
 }
 
 .color2 {
-    background-color: #ffecb3;
+    background-color: #3f51b5;
 }
 
 .color3 {
