--- a/index.html
+++ b/index.html
@@ -178,22 +178,27 @@ h2 {
 
 .color2 {
     background-color: #3f51b5;
+    color: white;
 }
 
 .color3 {
-    background-color: #ede7f6;
+     background-color: #3f51b5;
+    color: white;
 }
 
 .color4 {
-    background-color: #c8e6c9;
+     background-color: #3f51b5;
+    color: white;
 }
 
 .color5 {
-    background-color: #ffccbc;
+     background-color: #3f51b5;
+    color: white;
 }
 
 .color6 {
-    background-color: #ffebee;
+     background-color: #3f51b5;
+    color: white;
 }
 
 .results-container {
