--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ h2 {
      </div>
         <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
-
+<div class="container">
    <h2>Resultados:</h2>
 
 <div class="results-container">
@@ -297,7 +297,7 @@ h2 {
     <div class="result-block color4"onclick="showPopup('É a quantidade total depois de terminar de rodar todos os carrosséis, este valor sempre deve ser o mais próximo possível da quantidade solicitada na OP.')">
         <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     </div>
-
+</div>
 </div>
 
   <button onclick="downloadCSV()">Download CSV</button>
