--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ h2 {
      </div>
         <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
-<div class="container">
+<div class="results-container">
    <h2>Resultados:</h2>
 
 <div class="results-container">
