--- a/index.html
+++ b/index.html
@@ -366,6 +366,43 @@ function getActiveMachinesCount() {
     return count;
 }
 
+//-------------------
+
+// Função para alternar o estado das máquinas
+function toggleMachine(machineNumber) {
+    const button = document.getElementById(`machine${machineNumber}`);
+    if (button.classList.contains('inactive')) {
+        button.classList.remove('inactive');
+        button.classList.add('active');
+    } else {
+        button.classList.remove('active');
+        button.classList.add('inactive');
+    }
+}
+
+// Função para contar máquinas ativas
+function getActiveMachinesCount() {
+    let count = 0;
+    const machineButtons = document.getElementsByClassName('machine-btn');
+    for (let button of machineButtons) {
+        if (button.classList.contains('active')) {
+            count++;
+        }
+    }
+    return count;
+}
+
+// Manipula o envio do formulário
+document.getElementById('productionForm').addEventListener('submit', function(event) {
+    const activeMachines = getActiveMachinesCount();
+    if (activeMachines === 0) {
+        event.preventDefault(); // Impede o envio do formulário
+        alert('Por favor, selecione pelo menos uma máquina antes de enviar o formulário.');
+    }
+});
+
+//-----------------
+    
 function formatOPNumber(input) {
     let value = input.value.replace(/\D/g, '');
     if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
