--- a/index.html
+++ b/index.html
@@ -343,10 +343,12 @@ document.addEventListener('DOMContentLoaded', (event) => {
     toggleForm(false);
 });
 
+// Função para mostrar popup
 function showPopup(message) {
     alert(message); // Mostra o pop-up com a informação
 }
 
+// Função para ativar ou desativar uma máquina
 function toggleMachine(machineNumber) {
     const button = document.getElementById(`machine${machineNumber}`);
     if (button.classList.contains('inactive')) {
@@ -361,6 +363,7 @@ function toggleMachine(machineNumber) {
     checkMachinesAndToggleForm();
 }
 
+// Conta as máquinas ativas
 function getActiveMachinesCount() {
     let count = 0;
     const machineButtons = document.getElementsByClassName('machine-btn');
@@ -372,19 +375,23 @@ function getActiveMachinesCount() {
     return count;
 }
 
-// Função que habilita ou desabilita o formulário com base na quantidade de máquinas ativas
+// Habilita ou desabilita o formulário com base na quantidade de máquinas ativas
 function checkMachinesAndToggleForm() {
     const activeMachinesCount = getActiveMachinesCount();
     toggleForm(activeMachinesCount > 0); // Habilita o formulário se houver ao menos uma máquina ativa
 }
 
+// Habilita ou desabilita todos os elementos do formulário
 function toggleForm(enable) {
     const formElements = document.querySelectorAll('input, select, button');
     formElements.forEach(element => {
-        element.disabled = !enable;
+        if (element.id !== 'machine1' && element.id !== 'machine2' && element.id !== 'machine3') {
+            element.disabled = !enable; // Habilita ou desabilita o formulário
+        }
     });
 }
 
+// Formata o número da OP (Operação)
 function formatOPNumber(input) {
     let value = input.value.replace(/\D/g, '');
     if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
@@ -393,25 +400,26 @@ function formatOPNumber(input) {
     input.value = value;
 }
 
+// Verifica se a OP é repetida
 function checkRepeatedOP() {
     const opNumber = document.getElementById('opNumber').value;
 
     if (opNumber && isOPRepeated(opNumber)) {
         if (confirm("Tem certeza que quer repetir a OP?")) {
             // O usuário confirmou que deseja repetir a OP
-            // Aqui você pode executar uma ação adicional, se necessário
         } else {
-            // Limpa o campo se o usuário cancelar
-            document.getElementById('opNumber').value = '';
+            document.getElementById('opNumber').value = ''; // Limpa o campo se o usuário cancelar
             alert("Número da OP foi limpo.");
         }
     }
 }
 
+// Verifica se o número da OP já foi registrado
 function isOPRepeated(opNumber) {
     return records.some(record => record.opNumber === opNumber);
 }
 
+// Calcula e salva os dados
 function calculateAndSave() {
     const opNumber = document.getElementById('opNumber').value;
     const componentCode = document.getElementById('componentCode').value;
@@ -431,7 +439,6 @@ function calculateAndSave() {
     document.getElementById('cutsResult').textContent = numCutsText;
 
     let numTurns = 0;
-    // CALCULO NÚMERO DE VOLTAS
     if (fabricType === 'Plano') {
         numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
     } else if (fabricType === 'Tubular') {
@@ -496,6 +503,7 @@ function calculateAndSave() {
     saveTableToLocalStorage();
 }
 
+// Obtém as máquinas ativas
 function getActiveMachines() {
     const activeMachines = [];
     const machineButtons = document.getElementsByClassName('machine-btn');
@@ -507,6 +515,7 @@ function getActiveMachines() {
     return activeMachines;
 }
 
+// Atualiza a tabela com os dados
 function updateTable() {
     const tableBody = document.querySelector('#recordsTable tbody');
     tableBody.innerHTML = '';
@@ -533,10 +542,12 @@ function updateTable() {
     });
 }
 
+// Salva a tabela no localStorage
 function saveTableToLocalStorage() {
     localStorage.setItem('productionRecords', JSON.stringify(records));
 }
 
+// Carrega a tabela do localStorage
 function loadTableFromLocalStorage() {
     const storedRecords = localStorage.getItem('productionRecords');
     if (storedRecords) {
@@ -545,12 +556,18 @@ function loadTableFromLocalStorage() {
     }
 }
 
+// Faz o download dos registros em CSV
 function downloadCSV() {
     let csvContent = "data:text/csv;charset=utf-8,";
-    csvContent += "Data,Máquinas Ativas,OP Número,Código do Componente,Quantidade OP,Comprimento OP,Tipo de Tecido,Peso OP,Número de Cortes,Número de Voltas,Quantidade Cortada,Número de Carrosséis,Restante de Voltas,Quantidade Total Cortada,Tamanho do Carrossel\n";
-    
-    records.forEach((record) => {
-        const row = `"${record.date}","${record.machines}","${record.opNumber}","${record.componentCode}","${record.opQuantity}","${record.opLength}","${record.fabricType}","${record.opWeight}","${record.numCuts}","${record.numTurns}","${record.cutAmount}","${record.numCycles}","${record.remainingTurns}","${record.totalCutAmount}","${record.carouselSize}"`;
+    csvContent += "Data,Maquinas,OP,Componente,Quantidade,Comprimento,Tecido,Peso,Cortes,Voltas,Qtd Cortada,Ciclos,Voltas Restantes,Qtd Total,Tamanho do Carrossel\r\n";
+
+    records.forEach(record => {
+        let row = [
+            record.date, record.machines, record.opNumber, record.componentCode,
+            record.opQuantity, record.opLength, record.fabricType, record.opWeight,
+            record.numCuts, record.numTurns, record.cutAmount, record.numCycles,
+            record.remainingTurns, record.totalCutAmount, record.carouselSize
+        ].join(",");
         csvContent += row + "\r\n";
     });
 
@@ -561,6 +578,7 @@ function downloadCSV() {
     document.body.appendChild(link); // Requerido para Firefox
     link.click();
 }
+
 
 </script>
 
