--- a/index.html
+++ b/index.html
@@ -559,25 +559,21 @@ function loadTableFromLocalStorage() {
 // Faz o download dos registros em CSV
 function downloadCSV() {
     let csvContent = "data:text/csv;charset=utf-8,";
-    csvContent += "Data,Maquinas,OP,Componente,Quantidade,Comprimento,Tecido,Peso,Cortes,Voltas,Qtd Cortada,Ciclos,Voltas Restantes,Qtd Total,Tamanho do Carrossel\r\n";
-
-    records.forEach(record => {
-        let row = [
-            record.date, record.machines, record.opNumber, record.componentCode,
-            record.opQuantity, record.opLength, record.fabricType, record.opWeight,
-            record.numCuts, record.numTurns, record.cutAmount, record.numCycles,
-            record.remainingTurns, record.totalCutAmount, record.carouselSize
-        ].join(",");
-        csvContent += row + "\r\n";
+    csvContent += "Data,Máquinas Ativas,OP Número,Código do Componente,Quantidade OP,Comprimento OP,Tipo de Tecido,Peso OP,Número de Cortes,Número de Voltas,Quantidade Cortada,Número de Carrosséis,Restante de Voltas,Quantidade Total Cortada,Tamanho do Carrossel\n";
+    
+    records.forEach((record) => {
+        const row = `"${record.date}","${record.machines}","${record.opNumber}","${record.componentCode}","${record.opQuantity}","${record.opLength}","${record.fabricType}","${record.opWeight}","${record.numCuts}","${record.numTurns}","${record.cutAmount}","${record.numCycles}","${record.remainingTurns}","${record.totalCutAmount}","${record.carouselSize}"`;
+        csvContent += row + "\n";
     });
 
     const encodedUri = encodeURI(csvContent);
-    const link = document.createElement("a");
-    link.setAttribute("href", encodedUri);
-    link.setAttribute("download", "production_records.csv");
-    document.body.appendChild(link); // Requerido para Firefox
+    const link = document.createElement('a');
+    link.setAttribute('href', encodedUri);
+    link.setAttribute('download', 'production_records.csv');
+    document.body.appendChild(link);
     link.click();
 }
+
 
 
 </script>
