--- a/index.html
+++ b/index.html
@@ -348,6 +348,39 @@ function showPopup(message) {
     alert(message); // Mostra o pop-up com a informação
 }
 
+// Função para verificar OP repetida
+function checkRepeatedOP() {
+    const opNumber = document.getElementById('opNumber').value;
+    const componentCode = document.getElementById('componentCode').value;
+
+    // Verifica se a OP já existe
+    const existingRecord = records.find(record => record.opNumber === opNumber);
+
+    if (existingRecord) {
+        // OP já existe, pergunta ao usuário
+        const userConfirmed = confirm(`A OP ${opNumber} já existe. Deseja continuar?`);
+
+        if (userConfirmed) {
+            // Se o usuário confirmou, verifica o componentCode
+            const isComponentCodeRepeated = records.some(record => record.componentCode === componentCode && record.opNumber === opNumber);
+
+            if (isComponentCodeRepeated) {
+                showPopup(`A OP ${opNumber} com o componente ${componentCode} já existe. A inserção será bloqueada.`);
+                // Limpa o campo ou desabilita o botão de submit
+                document.getElementById('opNumber').value = '';
+                document.getElementById('componentCode').value = '';
+                return; // Sai da função
+            }
+        } else {
+            // Se o usuário não confirmou, limpa o campo
+            document.getElementById('opNumber').value = '';
+        }
+    }
+
+    // Se a OP não existe, habilita o formulário ou permite a continuação
+    toggleForm(true);
+}
+
 // Função para ativar ou desativar uma máquina
 function toggleMachine(machineNumber) {
     const button = document.getElementById(`machine${machineNumber}`);
