--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ h2 {
 <!-- INICIO DO SCRIPT -->
     
 <script>
-        let records = [];
+               let records = [];
 
         // Carrega a tabela do localStorage ao carregar a página
         document.addEventListener('DOMContentLoaded', (event) => {
@@ -372,6 +372,7 @@ h2 {
             const opNumber = document.getElementById('opNumber').value;
             const componentCode = document.getElementById('componentCode').value;
 
+            // Verifica se há uma combinação existente de OP e Código do Componente
             const isExisting = records.some(record => record.op === opNumber && record.componentCode === componentCode);
 
             if (isExisting) {
@@ -381,7 +382,7 @@ h2 {
             }
         }
 
-        // Carregar registros do localStorage (implementação fictícia)
+        // Carregar registros do localStorage
         function loadTableFromLocalStorage() {
             const storedRecords = localStorage.getItem('records');
             if (storedRecords) {
@@ -393,6 +394,7 @@ h2 {
         function toggleForm(enable) {
             document.querySelector('form').style.display = enable ? 'block' : 'none';
         }
+    
 // Função para ativar ou desativar uma máquina
 function toggleMachine(machineNumber) {
     const button = document.getElementById(`machine${machineNumber}`);
